--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "nodemon": "^3.1.0",
     "socket.io": "^4.7.5",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "@socket.io/cluster-adapter": "0.2.2"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8",
